--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,23 @@ body{
     justify-content: space-between;
   background-color: bisque;
 }
+
+.page-header a{
+    display: block;
+    padding:0.5em;
+    text-decoration:none;
+  }
+
+  .items {
+    display: grid;
+    grid-template-columns: repeat(4, 120px);
+    grid-column-gap: 200px;
+    margin-left: 100px;
+    margin-top: 50px;
+  }
+
+  .item {
+    border: solid 1px;
+    width: 300px;
+    margin-top: 30px;
+  }
